crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_optional_match_chained.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS n, $2 AS p]
  OptionalJoin
    Source (:Person AS $0)
    Expand ($0)-[:LIKES(->) $1]->(:Post AS $2)
