crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_order_by_multi_col.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
OrderBy [$0.age DESC, $0.name ASC]
  Project [$0.name AS name, $0.age AS age]
    Source (:Person AS $0)
