crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_order_skip_limit_full.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Limit 25
  Skip 5
    OrderBy [$0.name ASC]
      Project [$0.name AS name]
        Source (:Person AS $0)
