crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_remove_prop_and_label.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Source (:Person AS $0)
WriteOps:
  RemoveProperty $0.age
  RemoveLabels $0 :Inactive
