crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_set_labels.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Source (:Person AS $0)
WriteOps:
  SetLabels $0 :Admin:Moderator
