crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_single_node_no_label.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS n]
  Source (AS $0)
