crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_skip_with_param.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Limit $count
  Skip $offset
    Project [$0 AS n]
      Source (AS $0)
